feat(PQ-647): add data quality soft delete and filters
